--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,7 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
 }
 
 .icon {
@@ -33,6 +34,21 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+  margin: 10px;
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 10px;
+  row-gap: 10px;
+  column-gap: 5px;
+}
+
+.header{
+  font-weight: bolder;
+  font-size: larger;
 }
 
 .close-button {
@@ -46,6 +62,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left: auto;
 }
 
 button {
