--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style-type: none;
+}
+
 body {
   height: 100vh;
   margin: 0;
@@ -24,4 +32,30 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+
+.header, 
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.left-links,
+.right-links {
+  display: flex;
+  align-items: center;
+  gap: 2em;
+  margin: 20px;
+}
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 80vh;
+}
+.footer{
+  background-color: #ddd;
+  box-shadow: 0px -3px 4px #bbb;
 }
